<resources>
  <string name="app_name">Popular Movies</string>
  <string name="no_internet">No Internet Connection</string>
  <string name="action_settings">Settings</string>
  <string name="settings_sort_by">Sort By</string>
  <string name="settings_sort_default">popular</string>
  <string name="pref_list_sort">sort_order</string>
  <string name="details_poster_content_desc">Movie Poster</string>
  <string name="details_original_label">Original Title:</string>
  <string name="details_rating_label">Rating:</string>
  <string name="details_release_label">Released:</string>
  <string name="action_details">Movie Details</string>
  <string name="details_favorite_label_add">Add To Favorites</string>
  <string name="details_favorite_label_remove">Remove From Favorites</string>
  <string name="details_label_trailers">Trailers:</string>
  <string name="favorites_button_content_description">Favorites Button</string>
  <string name="play_trailer_content_description">Play Trailer</string>
  <string name="details_label_reviews">Reviews:</string>
  <string-array name="settings_sort_entries">
    <item>Most Popular</item>
    <item>Highest Rated</item>
    <item>Favorites</item>
  </string-array>
  <string-array name="settings_sort_entry_values">
    <item>popular</item>
    <item>rating</item>
    <item>favorites</item>
  </string-array>
</resources>
